Second attempt to fix font-size on mobile displays.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -703,6 +703,10 @@
           width: 40%;
         }
 
+        #courses .course-list .course-block{
+          font-size: 1rem;
+        }
+
       }
 
       @media only screen and (max-width: 600px){
